# frump

./: README.md  bun.lockb  package.json
src/: Tools.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/Jotai/: PlaybackState.ts
src/UI/: App.tsx  PlaybackControls.tsx  SongPlaying.tsx  Utilities.tsx
src/UI/styles/: App.css
